--- a/contact.html
+++ b/contact.html
@@ -179,9 +179,9 @@
           </div>
       </div>
     </div>
-    <div class="position-relative rounded overflow-hidden h-100">
+    <div class="position-relative rounded overflow-hidden h-100 mx-5 mb-5">
       <iframe
-        class="position-relative w-100 h-100 mx-"
+        class="position-relative w-100 h-100 "
         style="min-height: 400px"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3969.0136502887613!2d-35.213870549560056!3d-5.853698959286028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2ff617c366c33%3A0xbd682b5a1af3e862!2sAv.%20D%C3%A3o%20Silveira%2C%203860%20-%20loja%203%20-%20Candel%C3%A1ria%2C%20Natal%20-%20RN%2C%2059080-560!5e0!3m2!1sen!2sbr!4v1667267808152!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         frameborder="0"
