links para projetos e laboratorios

--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
                       class="align-self-center mb-3"
                       src="img/icon/laboratorios.jpg"
                       alt=""
+                      href="/labs.html"
                     />
                     <h5 class="mb-0">Laborátorios</h5>
                   </div>
@@ -368,6 +369,7 @@
                       class="align-self-center mb-3"
                       src="img/icon/Projetos.jpg"
                       alt=""
+                      href="/projs.html"
                     />
                     <h5 class="mb-0">Projetos Pedagógicos</h5>
                   </div>
