--- a/index.html
+++ b/index.html
@@ -350,12 +350,14 @@
                   <div
                     class="bg-white d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3"
                   >
+                  <a href="/labs.html">
                     <img
                       class="align-self-center mb-3"
                       src="img/icon/laboratorios.jpg"
                       alt=""
                       href="/labs.html"
                     />
+                  </a>
                     <h5 class="mb-0">Laborátorios</h5>
                   </div>
                 </div>
@@ -365,12 +367,14 @@
                   <div
                     class="bg-white d-flex flex-column justify-content-center text-center rounded py-4 px-3"
                   >
+                  <a href="/projs.html>"> 
                     <img
                       class="align-self-center mb-3"
                       src="img/icon/Projetos.jpg"
                       alt=""
-                      href="/projs.html"
-                    />
+                      />
+                  </a>
+                  </a>
                     <h5 class="mb-0">Projetos Pedagógicos</h5>
                   </div>
                 </div>
