--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                   <div
                     class="bg-white d-flex flex-column justify-content-center text-center rounded py-4 px-3"
                   >
-                  <a href="/feeling/projs.html>"> 
+                  <a href="/feeling/projs.html"> 
                     <img
                       class="align-self-center mb-3"
                       src="img/icon/Projetos.jpg"
