--- a/biblioteca.html
+++ b/biblioteca.html
@@ -163,7 +163,7 @@
     </nav>
 
     <div class="container" style="padding-top: 1.5rem !important;">
-      <h1 class="display-4 animated slideInDown mb-4">Biblioteca e Mapoteca</h1>
+      <h1 class="display-4 animated slideInDown mb-4">Biblioteca</h1>
     </div>
     <div
       class="container-fluid page-header wow fadeIn"
