Changes on biblioteca

--- a/brinquedoold.html
+++ b/brinquedoold.html
@@ -145,7 +145,7 @@
             <img class="img-fluid me-3" src="img/logo.png" alt="" />
           </a>
           <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link active">Sobre</a>
+          <a href="about.html" class="nav-item nav-link">Sobre</a>
           <a href="mapas.html" class="nav-item nav-link">Mapa</a>
           <div class="nav-item dropdown">
             <a
@@ -162,21 +162,26 @@
       </div>
     </nav>
 
-    <div class="container" style="padding-top: 1.5rem !important;">
-      <h1 class="display-4 animated slideInDown mb-4">Brinquedoteca</h1>
-    </div>
     <div
-      class="container-fluid page-header wow fadeIn"
-      data-wow-delay="0.1s", style="padding-bottom: 1.5rem;"
+      class="container-fluid page-header py-5 mb-5 wow fadeIn"
+      data-wow-delay="0.1s"
     >
+      <div class="container py-5">
+        <h1 class="display-4 animated slideInDown mb-4">Brinquedoteca Infantil</h1>
+        <nav aria-label="breadcrumb animated slideInDown">
+          <ol class="breadcrumb mb-0">
+          </ol>
+        </nav>
+      </div>
+    </div>
 
-    <div class="container-xxl">
+    <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div
-              class="position-relative overflow-hidden rounded h-100"
+              class="position-relative overflow-hidden rounded ps-5 pt-5 h-100"
               style="min-height: 500px">
               <img
                 class="position-absolute w-100 h-100"
@@ -197,6 +202,16 @@
               <p class="mb-4" Align="justify">
                 Quando misturamos brincadeira com aprendizado fica difícil não querer participar, ainda mais quando falamos de crianças, cheias de energia para gastar. Com o nosso programa "Brinquedoteca Infantil", oferecemos os materiais necessários para tornar a sua aula uma grande brincadeira educativa. Através dos nossos 160 livros infantis (acompanha baú), somados aos 11 brindes direcionados a montagem do parquinho infantil. Você terá nas mãos grandes ferramentas do processo de ensino-aprendizagem.
               </p>
+            </div>
+          </div>
+
+          <!--  -->
+
+         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="h-100">
+
+              <h1 class="display-6 mb-5"></h1>
+
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
@@ -208,18 +223,26 @@
                 Publico
               </p>
               <p class="mb-4" Align="justify">
-                Alunos de 6 a 10 anos.
+              Alunos de 6 a 10 anos.
               </p>
-              <a style="width: 100%;" href="https://drive.google.com/drive/folders/1oVOMJWsjwCjog_Jw4lfA_q-RCsZrw8Tc?usp=share_link" class="btn btn-primary">Acesse o folder</a>
             </div>
           </div>
 
-          <!--  -->
-
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div
+              class="position-relative overflow-hidden rounded ps-5 pt-5 h-100"
+              style="min-height: 500px">
+              <img
+                class="position-absolute w-100 h-100"
+                src="img/projetos/brinquedoteca2.jpg"
+                alt=""
+                style="object-fit: cover"/>
+            </div>
+          </div>
         </div>
       </div>
     </div> 
-    </div>
+    
     <div
       class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn"
       data-wow-delay="0.1s"
@@ -234,7 +257,7 @@
                 alt=""
               />
             </h1>
-            <!-- <p style="color:rgba(255, 255, 255, 0.9)"> 
+            <!-- <p style="color:rgba(255, 255, 255, 0.9)">  
               Nossas redes sociais
             </p>
             <div class="d-flex pt-2">
@@ -250,7 +273,7 @@
               <a class="btn btn-square me-0" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
-            </div> -->
+            </div>-->
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Endereço</h5>
