Mudanças no espaçamento

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
     </nav>
 
     <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
+      class="container-fluid page-header wow fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl">
       <div class="container">
         <div class="row g-5">
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
