--- a/contact.html
+++ b/contact.html
@@ -145,22 +145,17 @@
       class="container-fluid page-header wow fadeIn"
       data-wow-delay="0.1s"
     >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Entre em contato conosco!</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0">
-          </ol>
-        </nav>
-      </div>
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Entre em contato conosco</h1>
     </div>
 
     <div class="container-xxl">
       <div class="container">
         <div class="row g-5">
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <h1 class="display-6 mb-5">
-              Nos envie sua dúvida ou venha nos encontrar!
-            </h1>
+            <h3 class="display-6 mb-5">
+              Envie-nos uma mensagem com sua dúvida ou visite o nosso escritório!
+            </h3>
             <p class="mb-4">
             </p>
             <form>
