Modificação preview dos campos

--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                       id="subject"
                       placeholder="Subject"
                     />
-                    <label for="subject">Título</label>
+                    <label for="subject">Assunto da mensagem</label>
                   </div>
                 </div>
                 <div class="col-12">
@@ -201,7 +201,7 @@
                       id="message"
                       style="height: 100px"
                     ></textarea>
-                    <label for="message">Menssagem</label>
+                    <label for="message">Mensagem</label>
                   </div>
                 </div>
                 <div class="col-12">
