--- a/contact.html
+++ b/contact.html
@@ -134,13 +134,21 @@
           <a href="index.html" class="nav-item nav-link">Home</a>
           <a href="about.html" class="nav-item nav-link">Sobre</a>
           <a href="mapas.html" class="nav-item nav-link">Mapa</a>
-          <a href="service.html" class="nav-item nav-link">Programas</a>
-          <a href="contact.html" class="nav-item nav-link active">Contato</a>
+          <div class="nav-item dropdown">
+            <a
+              href="#"
+              class="nav-link dropdown-toggle"
+              data-bs-toggle="dropdown">Programas</a>
+            <div class="dropdown-menu bg-light border-0 m-0">
+              <a href="labs.html" class="dropdown-item">Laboratórios</a>
+              <a href="projs.html" class="dropdown-item">Proj. Pedagógicos</a>
+            </div>
+          </div>
+          <a href="contact.html" class="nav-item nav-link">Contato</a>
         </div>
       </div>
-      <a href="https://coopedu.com.br/" class="btn btn-primary px-3 d-none d-lg-block" style="border-color: #F58634; background-color: #F58634;" target="_blank">Site externo</a>
     </nav>
-
+    
     <div
       class="container-fluid page-header wow fadeIn"
       data-wow-delay="0.1s"
