--- a/index.html
+++ b/index.html
@@ -350,12 +350,11 @@
                   <div
                     class="bg-white d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3"
                   >
-                  <a href="/feeling/labs.html">
+                  <a href="/labs.html">
                     <img
                       class="align-self-center mb-3"
                       src="img/icon/laboratorios.jpg"
                       alt=""
-                      href="/labs.html"
                     />
                   </a>
                     <h5 class="mb-0">Laborátorios</h5>
@@ -367,7 +366,7 @@
                   <div
                     class="bg-white d-flex flex-column justify-content-center text-center rounded py-4 px-3"
                   >
-                  <a href="/feeling/projs.html"> 
+                  <a href="/projs.html"> 
                     <img
                       class="align-self-center mb-3"
                       src="img/icon/Projetos.jpg"
