--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
             </h4>
             <p class="mb-4">
             </p>
-            <form>
+            <form action="https://formsubmit.co/your@email.com" method="post">
               <div class="row g-3">
                 <div class="col-md-6">
                   <div class="form-floating">
