--- a/contact.html
+++ b/contact.html
@@ -175,6 +175,7 @@
                       class="form-control"
                       id="name"
                       placeholder="Your Name"
+                      name="Nome"
                     />
                     <label for="name">Seu nome</label>
                   </div>
