adição atributo name

--- a/contact.html
+++ b/contact.html
@@ -187,6 +187,7 @@
                       class="form-control"
                       id="email"
                       placeholder="Your Email"
+                      name="Email"
                     />
                     <label for="email">Seu E-mail</label>
                   </div>
@@ -198,6 +199,7 @@
                       class="form-control"
                       id="subject"
                       placeholder="Subject"
+                      name="Assunto"
                     />
                     <label for="subject">Assunto da mensagem</label>
                   </div>
@@ -209,6 +211,7 @@
                       placeholder="Leave a message here"
                       id="message"
                       style="height: 100px"
+                      mensagem="Mensagem"
                     ></textarea>
                     <label for="message">Mensagem</label>
                   </div>
