--- a/contact.html
+++ b/contact.html
@@ -217,6 +217,7 @@
                   </div>
                 </div>
                 <div class="col-12">
+                  <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
                   <button class="btn btn-primary py-3 px-5" type="submit">
                     Enviar mensagem
                   </button>
