--- a/obrigado.html
+++ b/obrigado.html
@@ -154,97 +154,10 @@
       data-wow-delay="0.1s"
     >
     <div class="container" style="padding-top: 1.5rem !important;">
-      <h1 class="display-4 animated slideInDown mb-4">Entre em contato conosco</h1>
+      <h1 class="display-4 animated slideInDown mb-4">Obrigado por entrar em contato conosco</h1>
+      <h3 class="display-4 animated slideInDown mb-4">Nós entraremos em contato assim que possível!</h3>
     </div>
 
-    <div class="container-xxl">
-      <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <h4 class="display-6 mb-3">
-              Envie-nos uma mensagem com sua dúvida ou visite o nosso escritório!
-            </h4>
-            <p class="mb-4">
-            </p>
-            <form action="https://formsubmit.co/pabloyra@gmail.com" method="post">
-              <div class="row g-3">
-                <div class="col-md-6">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="name"
-                      placeholder="Your Name"
-                      name="Nome"
-                    />
-                    <label for="name">Seu nome</label>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-floating">
-                    <input
-                      type="email"
-                      class="form-control"
-                      id="email"
-                      placeholder="Your Email"
-                      name="Email"
-                    />
-                    <label for="email">Seu E-mail</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="subject"
-                      placeholder="Subject"
-                      name="Assunto"
-                    />
-                    <label for="subject">Assunto da mensagem</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-floating">
-                    <textarea
-                      class="form-control"
-                      placeholder="Leave a message here"
-                      id="message"
-                      style="height: 100px"
-                      name="Mensagem"
-                    ></textarea>
-                    <label for="message">Mensagem</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <input type="hidden" name="_next" value="obrigado.html">
-                  <button class="btn btn-primary py-3 px-5" type="submit">
-                    Enviar mensagem
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div
-            class="col-lg-6 wow fadeIn"
-            data-wow-delay="0.5s"
-            style="min-height: 450px"
-          >
-            <div class="position-relative rounded overflow-hidden h-100">
-              <iframe
-                class="position-relative w-100 h-100"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3969.0136502887613!2d-35.213870549560056!3d-5.853698959286028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2ff617c366c33%3A0xbd682b5a1af3e862!2sAv.%20D%C3%A3o%20Silveira%2C%203860%20-%20loja%203%20-%20Candel%C3%A1ria%2C%20Natal%20-%20RN%2C%2059080-560!5e0!3m2!1sen!2sbr!4v1667267808152!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                frameborder="0"
-                style="min-height: 450px; border: 0"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- Contact End -->
     </div>
     <div
