--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
                 </div>
                 <div class="col-12">
                   <input type="hidden" name="_next" value="https://pabloopgg.github.io/feeling/obrigado.html"/>
-                  <input type="hidden" name="_captcha" value="true"/>
+                  <input type="hidden" name="_captcha" value="false">
                   <button class="btn btn-primary py-3 px-5" type="submit">
                     Enviar mensagem
                   </button>
