finalização do obrigado

--- a/obrigado.html
+++ b/obrigado.html
@@ -154,7 +154,7 @@
       data-wow-delay="0.1s"
     >
     <div class="container" style="padding-top: 1.5rem !important;">
-      <h1 class="display-4 animated slideInDown mb-4">Obrigado por entrar em contato conosco</h1>
+      <h1 class="display-4 animated slideInDown mb-4">Obrigado por entrar nos deixar uma mensagem</h1>
       <h3 class="animated slideInDown mb-4">Nós entraremos em contato assim que possível!</h3>
     </div>
 
