--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
             </h4>
             <p class="mb-4">
             </p>
-            <form action="https://formsubmit.co/pabloyra@gmail.com" method="post">
+            <form action="https://formsubmit.co/contato@feelingholding.com.br" method="post">
               <div class="row g-3">
                 <div class="col-md-6">
                   <div class="form-floating">
@@ -219,6 +219,7 @@
                 <div class="col-12">
                   <input type="hidden" name="_next" value="https://feelingcomercio.com.br/obrigado.html"/>
                   <input type="hidden" name="_captcha" value="false"/>
+                  <input type="hidden" name="_cc" value="xcontato.jv@gmail.com"/>
                   <button class="btn btn-primary py-3 px-5" type="submit">
                     Enviar mensagem
                   </button>
