Edição redação remoção de numeral

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -201,7 +201,7 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Acervo composto por aproximadamente 500 livros.
+                Conta com um acervo composto por centenas de livros.
               </p>
 
               <p class="fs-5 text-primary mb-4">
