modificação na redação dos itens commitados

--- a/ensino.html
+++ b/ensino.html
@@ -195,20 +195,35 @@
                 Importância:
               </p>
               <p class="mb-4" Align="justify">
-                O "Projeto Nacional de Ensino em terceira Dimensão" chegou para impulsionar os métodos pedagógicos utilizados dentro das salas de aula, tendo como responsáveis pelo seu desenvolvimento uma equipe de especialistas em educação, tecnologia e design, reunidos em vários países, tornando essa incrível solução educacional um dos maiores e mais completos projetos de ensino em 3D do mercado brasileiro e mundial. Através de um rico baco de dados compostos por imagens, vídeos e atividades que contemplam todas as matérias, somados a tecnologia 3D ativa proporcionada pelos nossos óculos, permitem aos alunos observarem as mais profundas particularidades dos assuntos trabalhos, traçando um paralelo entre a ciência e o cotidiano.
+                O "Projeto Nacional de Ensino em terceira Dimensão" chegou para 
+                impulsionar os métodos pedagógicos utilizados dentro das salas 
+                de aula, tendo como responsáveis pelo seu desenvolvimento uma 
+                equipe de especialistas em educação, tecnologia e design, reunidos 
+                em vários países, tornando essa incrível solução educacional um 
+                dos maiores e mais completos projetos de ensino em 3D do mercado 
+                brasileiro e mundial. Através de um rico baco de dados compostos 
+                por imagens, vídeos e atividades que contemplam todas as matérias, 
+                somados a tecnologia 3D ativa proporcionada pelos nossos óculos, 
+                permitem aos alunos observarem as mais profundas particularidades 
+                dos assuntos trabalhos, traçando um paralelo entre a ciência e o 
+                cotidiano.
               </p>
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                01 móvel compacto e itinerante contendo uma gaveta com cabos de alimentação para o carregamento dos óculos, 01 notebook, 01 projetor 3D, 30 óculos 3D ativos, sistema de som dolby, acesso à plataforma da mozaik education e 24 cadernos de atividade.
+                Móvel compacto e itinerante contendo uma gaveta com cabos de 
+                alimentação para o carregamento dos óculos, notebook, projetor 
+                3D, kit com óculos 3D ativos, sistema de som dolby, acesso 
+                à plataforma da mozaik education e cadernos de atividade.
               </p>
 
               <p class="fs-5 text-primary mb-4">
-                Publico
+                Público
               </p>
               <p class="mb-4" Align="justify">
-                O laboratório é direcionado aos alunos do Ensino Fundamental I e II e Ensino Médio.
+                O laboratório é direcionado aos alunos do Ensino Fundamental I 
+                e II e Ensino Médio.
               </p>
               <a style="width: 100%;" href="https://drive.google.com/file/d/1TwGxbZQ6zmtAkueVSGsqyjViIYtqFCig/view?usp=share_link" class="btn btn-primary">Acesse o folder</a>
             </div>
