--- a/pilares.html
+++ b/pilares.html
@@ -195,17 +195,28 @@
                 Importância:
               </p>
               <p class="mb-4" Align="justify">
-                O programa contém cerca de 280 títulos, divididos entre: obras de referência, multi-matérias e literatura. Além disso, somado a esse incrível acervo, nosso projeto acompanha fantasias, "dedoches" e fantoches, materiais que auxiliam os educadores no processo de ensino.
-              </p>
+                O programa "Quatro Pilares da Educação" tem como objetivo 
+                possibilitar o acesso ao conhecimento por parte do aluno, 
+                permitindo que o educador traga para ao ambiente escolar 
+                diversos temas de interesse acadêmico, social e lazer, 
+                servindo como oportunidade para que os alunos possam dar 
+                voz às dúvidas e a sua visão de mundo, alcançando o plano 
+                desenvolvimento do educador e convidando o jovem a se aventurar 
+                no mundo dos livros. Toda a Organização pedagógica do projeto 
+                se basei no desenvolvimento de habilidades que compõem os 4 
+                pilares da educação: Aprender, Fazer, Ser e Conviver.             
+               </p>
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Alunos de 6 a 10 anos.
-              </p>
+                O programa contém cerca de 280 títulos, divididos entre: obras 
+                de referência, multimatérias e literatura. Além disso, somado 
+                a esse incrivel acervo, nosso projeto acompanha fantasias, dedoches 
+                e fantoches, materiais que auxiliam os educadores no processo de ensino.              </p>
 
               <p class="fs-5 text-primary mb-4">
-                Publico
+                Público
               </p>
               <p class="mb-4" Align="justify">
                 Alunos de 6 a 10 anos.
