--- a/robotica.html
+++ b/robotica.html
@@ -194,6 +194,7 @@
               <p class="fs-5 text-primary mb-4">
                 Importância:
               </p>
+              <p class="mb-4" Align="justify"></p>
               Aprender a ler, escrever e resolver operações matemáticas, são 
               habilidades essenciais e devem ser estimuladas nas crianças. Através 
               da expansão dos meios digitais, a utilização de ferramentas como a 
@@ -201,7 +202,6 @@
               não é mais novidade que muitas escolas em diversos países incluíram o 
               uso da tecnologia em sua grade curricular, tornando o processo de ensino 
               aprendizagem mais moderno e eficiente.
-              <p class="mb-4" Align="justify">
               </p>
               <p class="fs-5 text-primary mb-4">
                 Itens:
@@ -214,7 +214,7 @@
               </p>
 
               <p class="fs-5 text-primary mb-4">
-                Publico
+                Público
               </p>
               <p class="mb-4" Align="justify">
                 Oferecemos várias opções de laboratório, cada um direcionado ao nível de ensino (Ensino infantil. Fundamental I - A e B,
