--- a/soninho.html
+++ b/soninho.html
@@ -195,17 +195,29 @@
                 Importância:
               </p>
               <p class="mb-4" Align="justify">
-                Nas fases iniciais do ensino já não é novidade que através de ferramentas lúdicas e brincadeiras, as crianças desenvolvem mais facilmante habilidades básicas e essenciais, sendo esse processo aliado ao aprendizado de novos assuntos guiados pelo professor. Toda essa dinãmica leva a gasto maior de energia pro parte das crainças, acarretando na necessidade daquela "sonequinha renovadora" em algum horário do dia, essencial para melhoria do seu rendimento nas atividades diárias. Dessa forma, procurando aproveitar os espaçoes e oferecer conforto e acolhimento para as crianças dentro do processor pedagógico das instituiçoes, criamos o programa "O soninho do Bebê".
+                Nas fases iniciais do ensino já não é novidade que através 
+                de ferramentas lúdicas e brincadeiras, as crianças desenvolvem 
+                mais facilmante habilidades básicas e essenciais, sendo esse 
+                processo aliado ao aprendizado de novos assuntos guiados pelo 
+                professor. Toda essa dinãmica leva a gasto maior de energia pro 
+                parte das crainças, acarretando na necessidade daquela "sonequinha 
+                renovadora" em algum horário do dia, essencial para melhoria do 
+                seu rendimento nas atividades diárias. Dessa forma, procurando 
+                aproveitar os espaçoes e oferecer conforto e acolhimento para as 
+                crianças dentro do processor pedagógico das instituiçoes, criamos 
+                o programa "O soninho do Bebê".
               </p>
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                12 caminhas empilháveis e de fácil manuseio, 220 livros, incluindo" livros Travesseiros", baú para acondicionar os materiais, 03 pufes ou almofadas e tapete pedagógico ilustrado.
+                Caminhas empilháveis e de fácil manuseio, livros (incluindo 
+                "livros Travesseiros"), baú para acondicionar os materiais, 
+                pufes ou almofadas e tapete pedagógico ilustrado.
               </p>
 
               <p class="fs-5 text-primary mb-4">
-                Publico
+                Público
               </p>
               <p class="mb-4" Align="justify">
                 Alunos de 1 a 5 anos.
