--- a/ciencia.html
+++ b/ciencia.html
@@ -195,20 +195,29 @@
                 Importância:
               </p>
               <p class="mb-4" Align="justify">
-                O estudo das ciências proporciona ao aluno o entendimento dos fenômenos do universo, levando-o a navegar pelos ambientes macro e microscópios presentes tanto ao nosso redor, quanto dentro dos organismos existentes. Entender a natureza e os seus acontecimentos, assim como os seres que vivem dela, é ter a oportunidade de ampliar o seu horizonte de conhecimento sobre o universo.
+                O estudo das ciências proporciona ao aluno o entendimento dos 
+                fenômenos do universo, levando-o a navegar pelos ambientes macro 
+                e microscópios presentes tanto ao nosso redor, quanto dentro dos 
+                organismos existentes. Entender a natureza e os seus acontecimentos, 
+                assim como os seres que vivem dela, é ter a oportunidade de ampliar 
+                o seu horizonte de conhecimento sobre o universo.
               </p>
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Mapas e peças de exposição do corpo humano, matérias para estudo prático das reações químicas e físicas, ferramentas para o estudo da microbiologia, cadernos de atividade para os alunos e cadernos específicos do professor.
+                Mapas e peças de exposição do corpo humano, matérias para estudo 
+                prático das reações químicas e físicas, ferramentas para o estudo 
+                da microbiologia, cadernos de atividade para os alunos e cadernos 
+                específicos do professor.
               </p>
 
               <p class="fs-5 text-primary mb-4">
-                Publico
+                Público
               </p>
               <p class="mb-4" Align="justify">
-                Oferecemos 03 modelos de laboratórios individualmente direcionados a uma fase de ensino, são elas: Fundamental I e II, e o Ensino Médio.
+                Oferecemos três modelos de laboratórios individualmente direcionados a 
+                uma fase de ensino, são elas: Fundamental I e II, e o Ensino Médio.
               </p>
               <a style="width: 100%;" href="https://drive.google.com/file/d/1Celny8RtVI3--AcAcZ0bljMy30uPZxOV/view?usp=share_link" class="btn btn-primary">Acesse o folder</a>
             </div>
