--- a/projs.html
+++ b/projs.html
@@ -209,7 +209,7 @@
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="img/soninhodobebe.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
-              <h6 style="text-align: center;" class="card-title">Soninho do bebê</h6>  
+              <h6 style="text-align: center;" class="card-title">Soninho do Bebê</h6>  
           </div>
           <div class="card-footer">
             <a style="width: 100%;" href="soninho.html" class="btn btn-primary">Ver</a>
