--- a/cultura.html
+++ b/cultura.html
@@ -201,14 +201,20 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Oferecemos 02 possibilidades de estrutura para o projeto" a Tenda da Cultura", um direcionado ao Ensino Infantil e outro contemplando todas as idades.
+                A Tenda da Cultura (Todas as Idades): tenda pantográfica, mesas, 
+                cadeiras (infantis e adultas), livros diversos, como: obras direcionadas 
+                a concursos públicos, atlas, paradidáticos de literatura, livros infantis, 
+                infanto-juvenis, brinquedos e jogos pedagógicos. A Tenda da Cultura (Infantil): 
+                tenda inflável colorida, livros infantis, parque infantil, mesas e cadeiras 
+                (infantis e adultas), brinquedos, jogos pedagógicos e pufes infláveis.              
               </p>
 
               <p class="fs-5 text-primary mb-4">
                 Publico
               </p>
               <p class="mb-4" Align="justify">
-                Oferecemos 02 possibilidades de estrutura para o projeto " a Tenda da Cultura", um direcionado ao Ensino Infantil e outro contemplando todas as idades.
+                Oferecemos possibilidades de estrutura para o projeto "a Tenda da Cultura", 
+                um direcionado ao Ensino Infantil e outro contemplando todas as idades.
               </p>
               <a style="width: 100%;" href="https://drive.google.com/drive/folders/1oVOMJWsjwCjog_Jw4lfA_q-RCsZrw8Tc?usp=share_link" class="btn btn-primary">Acesse o folder</a>
             </div>
