justificar texto importancia

--- a/robotica.html
+++ b/robotica.html
@@ -194,7 +194,7 @@
               <p class="fs-5 text-primary mb-4">
                 Importância:
               </p>
-              <p class="mb-4" Align="justify"></p>
+              <p class="mb-4" Align="justify">
               Aprender a ler, escrever e resolver operações matemáticas, são 
               habilidades essenciais e devem ser estimuladas nas crianças. Através 
               da expansão dos meios digitais, a utilização de ferramentas como a 
