--- a/mapas.html
+++ b/mapas.html
@@ -734,7 +734,7 @@
                            rep_local[1] = 'Rua Atílio Capello 800, Bloco 1, Apto 107 São José do Rio Preto - SP CEP: 15051-003';
                            rep_email[1] = 'cristiane.medeiros2@icloud.com';
                            rep_telefone[1] = '(17) 99741-3370'; 
-                           rep_nome[2] = 'Marcos Divino Ramos.';
+                           rep_nome[2] = 'Marcos Divino Ramos';
                            rep_local[2] = 'Rua Maranhão, 982 – Apto 111 Bairro: Santa Paula – São Caetano do Sul – SP CEP: 09541-001';
                            rep_email[2] = 'gmarco@gmarco.com.br';
                            rep_telefone[2] = '(11) 94488-8880'; 
