remove .htacess and update on maps

--- a/mapas.html
+++ b/mapas.html
@@ -700,7 +700,12 @@
                            rep_email[0] = 'nacionalrepresentacao@uol.com.br';
                            rep_telefone[0] = '(85) 98933-0489';
       }
-        if (uf === 'mt') { html = 'do Mato Grosso'; }
+        if (uf === 'mt') { html = 'do Mato Grosso'; 
+                           rep_nome[0] = '';
+                           rep_local[0] = 'Rua Trinta e Quatro (S Cruz II), 442 – Quadra 78 LT A3 – Bairro: Santa Cruz II – Cep. 78.077-020 Cuiabá/MT';
+                           rep_email[0] = 'Fabio Henrique de Matos';
+                           rep_telefone[0] = '(65) 99251-5818'; 
+      }
         if (uf === 'ro') { html = 'de Rondônia'; }
         if (uf === 'ac') { html = 'do Acre'; }
         if (uf === 'ap') { html = 'do Amapá'; }
