--- a/mapas.html
+++ b/mapas.html
@@ -552,7 +552,6 @@
                 <div class="col-sm-4 wow" id="box0" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 id="rep_nome0" class="mb-0" style="color: white;"></h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -569,7 +568,6 @@
                 <div class="col-sm-4 wow" id="box1" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 id="rep_nome1" class="mb-0" style="color: white;"></h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -586,7 +584,6 @@
                 <div class="col-sm-4 wow" id="box2" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 id="rep_nome2" class="mb-0" style="color: white;"></h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -603,7 +600,6 @@
                 <div class="col-sm-4 wow" id="box3" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 id="rep_nome3" class="mb-0" style="color: white;"></h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -620,7 +616,6 @@
                 <div class="col-sm-4 wow" id="box4" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 id="rep_nome4" class="mb-0" style="color: white;"></h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -637,7 +632,6 @@
                 <div class="col-sm-4 wow" id="box5" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 id="rep_nome5" class="mb-0" style="color: white;"></h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -654,8 +648,40 @@
                 <div class="col-sm-4 wow" id="box6" style="display: none">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
-                      <h5 id="rep_nome5" class="mb-0" style="color: white;">Sem representantes na sua região</h5>
+                      <h5 id="rep_nome6" class="mb-0" style="color: white;"></h5>
+                      <div style="text-align: left; margin-top: 12%;">
+                        <p style="font-weight: bold; color: white;">Local: </p>
+                        <p id="local7" style="color: white;"></p>
+                        <p style="font-weight: bold; color: white;">Email: </p>
+                        <p id="email7" style="color: white;"></p>
+                        <p style="font-weight: bold; color: white;">Telefone: </p>
+                        <p id="telefone7" style="color: white;"></p>
+                      </div>
+                    </div>                 
+                  </div>
+                </div>
+
+                <div class="col-sm-4 wow" id="box7" style="display: none">
+                  <div class="bg-light rounded h-100 p-3">
+                    <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
+                      <h5 id="rep_nome7" class="mb-0" style="color: white;"></h5>
+                      <div style="text-align: left; margin-top: 12%;">
+                        <p style="font-weight: bold; color: white;">Local: </p>
+                        <p id="local8" style="color: white;"></p>
+                        <p style="font-weight: bold; color: white;">Email: </p>
+                        <p id="email8" style="color: white;"></p>
+                        <p style="font-weight: bold; color: white;">Telefone: </p>
+                        <p id="telefone8" style="color: white;"></p>
+                      </div>
+                    </div>                 
+                  </div>
+                </div>
+
+                <div class="col-sm-4 wow" id="box8" style="display: none">
+                  <div class="bg-light rounded h-100 p-3">
+                    <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
+                      <h5 id="rep_nome5" class="mb-0" style="color: white;">Não encontramos representantes no estado selecionado.</h5>
+                      <h6>Quer saber como ser um representante? <a href="contact.html">Entre em contato conosco!</a></h6>
                     </div>                 
                   </div>
                 </div>
@@ -672,10 +698,10 @@
       function preencerLateral(uf){
 
         let html = '';
-        var rep_nome = ['','','','','',''];
-        var rep_local = ['','','','','',''];
-        var rep_telefone = ['','','','','',''];
-        var rep_email = ['','','','','',''];
+        var rep_nome = ['','','','','','','',''];
+        var rep_local = ['','','','','','','',''];
+        var rep_telefone = ['','','','','','','',''];
+        var rep_email = ['','','','','','','',''];
         document.getElementById("box0").style = 'Display: none;';
         document.getElementById("box1").style = 'Display: none;';
         document.getElementById("box2").style = 'Display: none;';
@@ -683,6 +709,8 @@
         document.getElementById("box4").style = 'Display: none;';
         document.getElementById("box5").style = 'Display: none;';
         document.getElementById("box6").style = 'Display: none;';
+        document.getElementById("box7").style = 'Display: none;';
+        document.getElementById("box8").style = 'Display: none;';
 
         if (uf === 'ba') { html = 'da Bahia';}
         if (uf === 'se') { html = 'do Sergipe'; }
@@ -701,9 +729,9 @@
                            rep_telefone[0] = '(85) 98933-0489';
       }
         if (uf === 'mt') { html = 'do Mato Grosso'; 
-                           rep_nome[0] = '';
+                           rep_nome[0] = 'Fabio Henrique de Matos';
                            rep_local[0] = 'Rua Trinta e Quatro (S Cruz II), 442 – Quadra 78 LT A3 – Bairro: Santa Cruz II – Cep. 78.077-020 Cuiabá/MT';
-                           rep_email[0] = 'Fabio Henrique de Matos';
+                           rep_email[0] = 'N/A';
                            rep_telefone[0] = '(65) 99251-5818'; 
       }
         if (uf === 'ro') { html = 'de Rondônia'; }
@@ -796,16 +824,28 @@
                            rep_local[5] = 'Rua Joaquim Nabuco 806, CEP: 59600300';
                            rep_email[5] = 'alberto.a.rodrigues2013@gmail.com';
                            rep_telefone[5] = '(85) 99416-4741'; 
+                           rep_nome[6] = 'Weiner Kiney Lima da Silva';
+                           rep_local[6] = 'N/A';
+                           rep_email[6] = 'santapollinare.weiner@gmail.com';
+                           rep_telefone[6] = '(84) 98155-8605'; 
+                           rep_nome[7] = 'Cordimar Braga de Azevedo';
+                           rep_local[7] = 'N/A';
+                           rep_email[7] = 'cordimar.braga@grupofan.com';
+                           rep_telefone[7] = '(84) 98188-0020'; 
       }
         if (uf === 'pb') { html = 'da Paraíba'; 
                            rep_nome[0] = 'Roberta Cristina Soares de Souza';
                            rep_local[0] = 'AV PRINCESA ISABEL, 773, CENTRO, João Pessoa - PB, CEP: 58.013-251';
                            rep_email[0] = 'rcristinaapg@hotmail.com';
                            rep_telefone[0] = '(83) 99927-0661'; 
-                           rep_nome[1] = 'Marcus Tulio Farias de Brito';
+                           rep_nome[1] = 'Marco Tulio Farias de Brito';
                            rep_local[1] = 'Rua Maria Eliete de Coutinho Fabrício, 27 – Sala 207 – Bairro: Bancários – Cep. 58.051-600. João Pessoa/PB';
                            rep_email[1] = 'Marcotuliofb2020@gmail.com';
-                           rep_telefone[1] = '(83) 99189-6558';                      
+                           rep_telefone[1] = '(83) 99189-6558';
+                           rep_nome[1] = 'Jaciara Linhares Alves Pereira';
+                           rep_local[1] = 'N/A';
+                           rep_email[1] = 'jaciara17vd@gmail.com';
+                           rep_telefone[1] = '(82) 98602-8185';                      
       }
         if (uf === 'df') { html = 'do Distrito Federal'; }
         
@@ -821,15 +861,14 @@
                     document.getElementById("box4").style = 'block';
                       if (rep_nome[5] !== '') {
                       document.getElementById("box5").style = 'block';
-                    }
-                }
-              }
-            }
-          }
-        }
+                        if (rep_nome[6] !== '') {
+                        document.getElementById("box6").style = 'block';
+                          if (rep_nome[7] !== '') {
+                          document.getElementById("box7").style = 'block';
+          }}}}}}}}
       
         else {
-          document.getElementById("box6").style = 'block';
+          document.getElementById("box8").style = 'block';
         }
 
         if (html !== '') {
@@ -841,24 +880,35 @@
           document.getElementById("rep_nome3").innerHTML = rep_nome[3];
           document.getElementById("rep_nome4").innerHTML = rep_nome[4];
           document.getElementById("rep_nome5").innerHTML = rep_nome[5];
+          document.getElementById("rep_nome6").innerHTML = rep_nome[6];
+          document.getElementById("rep_nome7").innerHTML = rep_nome[7];
+
           document.getElementById("local1").innerHTML = rep_local[0];
           document.getElementById("local2").innerHTML = rep_local[1];
           document.getElementById("local3").innerHTML = rep_local[2];
           document.getElementById("local4").innerHTML = rep_local[3];
           document.getElementById("local5").innerHTML = rep_local[4];
           document.getElementById("local6").innerHTML = rep_local[5];
+          document.getElementById("local7").innerHTML = rep_local[6];
+          document.getElementById("local8").innerHTML = rep_local[7];
+
           document.getElementById("email1").innerHTML = rep_email[0];
           document.getElementById("email2").innerHTML = rep_email[1];
           document.getElementById("email3").innerHTML = rep_email[2];
           document.getElementById("email4").innerHTML = rep_email[3];
           document.getElementById("email5").innerHTML = rep_email[4];
           document.getElementById("email6").innerHTML = rep_email[5];
+          document.getElementById("email7").innerHTML = rep_email[6];
+          document.getElementById("email8").innerHTML = rep_email[7];
+
           document.getElementById("telefone1").innerHTML = rep_telefone[0];
           document.getElementById("telefone2").innerHTML = rep_telefone[1];
           document.getElementById("telefone3").innerHTML = rep_telefone[2];
           document.getElementById("telefone4").innerHTML = rep_telefone[3];
           document.getElementById("telefone5").innerHTML = rep_telefone[4];
           document.getElementById("telefone6").innerHTML = rep_telefone[5];
+          document.getElementById("telefone7").innerHTML = rep_telefone[6];
+          document.getElementById("telefone8").innerHTML = rep_telefone[7];
         }
 
       }
