Remoção temporária de Raízes e encantos, alteração de faixa etária de Inclusão Social, correção dos links de laboratórios.

--- a/inclusao.html
+++ b/inclusao.html
@@ -210,7 +210,7 @@
               <p class="mb-4" Align="justify">
                 Atende alunos a partir de 2 anos.
               </p>
-              <a style="width: 100%;" href="https://drive.google.com/drive/folders/1oVOMJWsjwCjog_Jw4lfA_q-RCsZrw8Tc?usp=share_link" class="btn btn-primary">Acesse o folder</a>
+              <a style="width: 100%;" href="https://drive.google.com/file/d/1bsP89wufRlb9dh9JbFGoDcWWpelDq_gb/view?usp=sharing" class="btn btn-primary">Acesse o folder</a>
             </div>
           </div>
 
