--- a/index.html
+++ b/index.html
@@ -378,20 +378,17 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
+
+        <!--  <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                 <div class="bg-light rounded h-100 p-3">
-                  <div
-                    class="bg-white d-flex flex-column justify-content-center text-center rounded py-4 px-3"
-                  >
-                    <img
-                      class="align-self-center mb-3"
-                      src="img/icon/Raizeseencantos.jpg"
-                      alt=""
-                    />
+                  <div class="bg-white d-flex flex-column justify-content-center text-center rounded py-4 px-3">
+                    <img class="align-self-center mb-3" src="img/icon/Raizeseencantos.jpg" alt="" />
                     <h5 class="mb-0">Raizes e Encantos</h5>
                   </div>
                 </div>
               </div>
+        -->
+
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                 <div class="bg-light rounded h-100 p-3">
                   <div
