--- a/cultura.html
+++ b/cultura.html
@@ -260,9 +260,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Endereço</h5>
-            <p style="color: white;">
-              <i class="fa fa-map-marker-alt me-3"></i>Av. Dão Silveira 3860, Loja 3 - Candelária / Natal-RN
-            </p>
+            <p style="color: white;"><i class="fa fa-map-marker-alt me-3"></i>COND. EMPRESARIAL MIGUEL SEABRA FAGUNDES – Salas 804 - Rua Paulo Barros de Goes, 1840 – Lagoa Nova - CEP: 59064-460 / Natal-RN</p>
             <p style="color: white;"><i class="fa fa-phone-alt me-3"></i>(84)99913-8890 / (84)99452-2888</p>
             <p style="color: white;"><i class="fa fa-envelope me-3"></i>comercial@feelingholding.com.br</p>
           </div>
